--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- this is a navbar sectionb -->
     <header>
         <nav>
             <div class="menu-conteiner">
@@ -22,7 +23,22 @@
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section>
+            <div class="banner-conteiner">
+                <div class="banner-text">
+                    <h1 class="title">Better design for <br>
+                        your digital products</h1>
+                        <p class="paragraph">We are a creative studio specializing in UI/UX design, development and strategy.
+                        </p>
+                        <button class="button">Explore More</button>
+                </div>
+                <div class="banner-photos">
+                    <img class="banner-img" src="./Images/banner.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
