--- a/index.html
+++ b/index.html
@@ -38,6 +38,27 @@
                 </div>
             </div>
         </section>
+        <!-- this is about us section -->
+        <section>
+            <h1 class="title about-title">ABOUT US</h1>
+            <div class="about-conteiner">
+                <div class="about-text">
+                    <h1 class="title2">We grow brands through <br>
+                        bold & strategic creative</h1>
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing.
+                          <br>  Lorem ipsum dolor sit amet consectetur adipisicing.
+                        </p>
+                        <button class="button">Contact With US</button>
+                </div>
+                <div>
+                    <img class="banner-img" src="Images/section.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- this is service section -->
+        <section>
+            
+        </section>
     </main>
     <footer></footer>
 </body>
