--- a/index.html
+++ b/index.html
@@ -57,7 +57,29 @@
         </section>
         <!-- this is service section -->
         <section>
-            
+        <div class="service-conteiner1">
+            <h1 class="title about-title title3">Our Service's</h1>
+            <div class="service-conteiner">
+                <div class="box">
+                    <img class="icon" src="Images/logo-light.png" alt="">
+                    <h2 class="h2-title" >Web Vevelopment</h2>
+                    <p class="p-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a quis reprehenderit culpa qui dolores exercitationem quia dignissimos nulla assumenda?</p>
+                    <button class="button service-button">Details</button>
+                </div>
+                <div class="box">
+                    <img class="icon" src="Images/logo-light.png" alt="">
+                    <h2 class="h2-title" >Web Vevelopment</h2>
+                    <p class="p-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a quis reprehenderit culpa qui dolores exercitationem quia dignissimos nulla assumenda?</p>
+                    <button class="button service-button">Details</button>
+                </div>
+                <div class="box">
+                    <img class="icon" src="Images/logo-light.png" alt="">
+                    <h2 class="h2-title" >Web Vevelopment</h2>
+                    <p class="p-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis a quis reprehenderit culpa qui dolores exercitationem quia dignissimos nulla assumenda?</p>
+                    <button class="button service-button">Details</button>
+                </div>
+            </div>
+        </div>
         </section>
     </main>
     <footer></footer>
