--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- this is a navbar sectionb -->
+    <!-- this is a navbar section -->
     <header>
         <nav>
             <div class="menu-conteiner">
@@ -57,7 +57,7 @@
         </section>
         <!-- this is service section -->
         <section>
-        <div class="service-conteiner1">
+          <div class="service-conteiner1">
             <h1 class="title about-title title3">Our Service's</h1>
             <div class="service-conteiner">
                 <div class="box">
@@ -79,7 +79,7 @@
                     <button class="button service-button">Details</button>
                 </div>
             </div>
-        </div>
+          </div>
         </section>
     </main>
     <footer></footer>
