--- a/index.html
+++ b/index.html
@@ -82,6 +82,47 @@
           </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="foot-conteiner">
+            <div class="div1">
+                <img class="icon2" src="Images/logo-light.png" alt="">
+                <p class="div1-edits">Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit.
+                </p>
+            </div>
+            <div class="div2">
+                <h3 class="h3-footer">Useful Links</h3>
+                <ul class="ul">
+                    <li class="listitem">About us</li>
+                    <li class="listitem">Careers</li>
+                    <li class=" listitem">News & Article</li>
+                    <li class="listitem">Legal Notice</li>
+                </ul>
+            </div>
+            <div class="div3">
+                <h3 class="h3-footer">Supports</h3>
+                <div class="ul">
+                    <li>Help Center</li>
+                    <li>Contact us</li>
+                    <li>FAQ</li>
+                    <li>Parent Community</li>
+                </div>
+            </div>
+            <div class="dib4">
+                <h3 class="h3-footer">Contact Information</h3>
+                <ul class="ul">
+                    <li>Feel free to contact & reach us !!</li>
+                    <li>3557 Derek Drive, Orlando, Florida</li>
+                    <li>+1(456)657-887</li>
+                    <li>info@domain.com</li>
+                </ul>
+            </div>
+        </div>
+        <!-- <hr  class="hr"/> -->
+           
+            <p class="copy">
+              <small>Copyright © 2022 Agence. All rights reserved.</small>
+            </p>
+        
+    </footer>
 </body>
 </html>
